# agent-demos

./: README.md
langgraph-demo/: .gitignore  README.md  main.py  mcp_config.json  pyproject.toml  server.py
openai-agents-sdk-demo/: README.md  main.py  pyproject.toml
openai-agents-sdk-demo/temp/: use_agent_as_tool.py  use_agent_with_handoffs.py
